# REREAL-Spitit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FOLDER_STRUCTURE.md  LICENSE  README.md  REREAL - Spitit Full build Prompt.md  REREAL-Spitit.spec  build-release.ps1  build_icon.py  config.py  hotkey.py  main.py  paster.py  pyproject.toml  recorder.py  requirements.txt  test_launch.py  test_pill.py  transcriber.py  tray.py  ui.py  version.txt  version_info.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
docs/: guide.html  index.html  style.css
installer/: Install-REREAL-Spitit.ps1  REREAL-Spitit.iss  license.rtf  uninstall-REREAL-Spitit.ps1
scripts/: build_icon.py  generate_sound.py
src/: __init__.py  config.py  hotkey.py  main.py  paster.py  recorder.py  transcriber.py  tray.py  updater.py
src/ui/: __init__.py  components.py  pill.py  settings.py  splash.py  theme.py
