[project]
name = "spitit"
version = "1.1.0"
description = "Voice-to-text for Windows with Groq Whisper"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "REREAL"}]
dependencies = [
    "customtkinter>=5.2.0",
    "groq>=0.11.0",
    "keyboard>=0.13.5",
    "numpy>=1.26.0",
    "pyperclip>=1.9.0",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "scipy>=1.11.0",
    "sounddevice>=0.5.0",
]
[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]
build = ["pyinstaller>=6.0"]
[tool.setuptools]
py-modules = ["main", "ui", "tray", "config", "hotkey", "paster", "recorder", "transcriber"]

[project.scripts]
spitit = "main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["."]
extraPaths = ["."]
